# mk-school

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: education_control.py  platform.py  school_core_operations.py  school_timetable_operational.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/repositories/: education_control.py
backend/app/schemas/: education_control.py
backend/app/services/: education_control.py  roz_evidence.py
backend/migrations/: 001_school_erp_education_control.sql  002_control_schedules_statistics_scanner.sql  003_unified_erp_platform.sql  004_school_timetable_operational.sql
backend/tests/: test_roz_evidence.py  test_roz_slot_import_guard.py
frontend/: package-lock.json  package.json
reports/timetable_audit/: PHASE_3_TIMETABLE_BUILDER_FINAL_REPORT.md  PHASE_4B_VISUAL_STUDIO_RUNTIME_REPORT.md  PHASE_4_FINAL_TIMETABLE_STUDIO_REPORT.md  PHASE_5A_HARDENING_PRECHECK.md  PHASE_5A_PYDANTIC_MUTABLE_DEFAULTS_REPORT.md  PHASE_5B_SLOT_DELETE_GUARD_REPORT.md  PHASE_5C_SLOT_CREATE_GUARD_REPORT.md  PHASE_5D_VERSION_LIFECYCLE_GUARD_REPORT.md  PHASE_5_FINAL_TIMETABLE_HARDENING_REPORT.md  PHASE_6A_PRECHECK_SMOKE_DATA_AND_POLISH.md  PHASE_6B_SMOKE_DATA_CLEANUP_DRY_RUN_API_REPORT.md  PHASE_6C_CLEANUP_DRY_RUN_UI_PANEL_REPORT.md  PHASE_6D_SMOKE_CLEANUP_PREVIEW_API_REPORT.md  PHASE_6E_CLEANUP_PREVIEW_UI_PANEL_REPORT.md  PHASE_6K_ROZ_ASCTT_SEMANTIC_PREVIEW_REPORT.md  (+40 more)
scripts/: audit_timetable_integration_report.sh  import_access_full_mirror.py  watch_mk_updates.sh
(+23 files in other folders)
